--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,68 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Spring Boot WebSocket Chat Application</title>
-    <link rel="stylesheet" href="/css/main.css"/>
+  <meta charset="UTF-8">
+  <meta  name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+  <title>Spring Boot WebSocket Chat Application</title>
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
 
 <div id="username-page">
-    <div class="username-page-container">
-        <h1 class="title">username을 입력하세요</h1>
-        <form id="usernameForm" name="usernameForm">
-            <div class="form-group">
-                <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control"/>
-            </div>
-            <div class="form-group">
-                <button type="submit" class="accent username-submit">채팅 시작하기</button>
-            </div>
-        </form>
-    </div>
+  <div class="username-page-container">
+    <h1 class="title">username을 입력하세요</h1>
+    <form id="usernameForm" name="usernameForm">
+      <div class="form-group">
+        <input type="text" id="name" placeholder="Username" autocomplete="off" class="form-control" />
+      </div>
+      <div class="form-group">
+        <button type="submit" class="accent username-submit">채팅 시작하기</button>
+      </div>
+    </form>
+  </div>
 </div>
 
 <div id="chat-page" class="hidden">
-    <div class="chat-container">
-        <div class="chat-header">
-            <h2>Spring WebSocket Chat Demo</h2>
-        </div>
-        <div class="connecting">
-            연결중...
-        </div>
-        <ul id="messageArea">
-
-        </ul>
-        <form id="messageForm" name="messageForm">
-            <div class="form-group">
-                <div class="input-group clearfix">
-                    <input type="text" id="message" placeholder="Type a message..." autocomplete="off"
-                           class="form-control"/>
-                    <button type="submit" class="primary">보내기</button>
-                </div>
-            </div>
-        </form>
+  <div class="chat-container">
+    <div class="chat-header">
+      <h2>Spring WebSocket Chat Demo</h2>
     </div>
+    <div class="connecting">
+      연결중...
+    </div>
+    <ul id="messageArea">
+
+    </ul>
+    <form id="messageForm" name="messageForm">
+      <div class="form-group">
+        <div class="input-group clearfix">
+          <input type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+          <button type="submit" class="primary">보내기</button>
+        </div>
+      </div>
+    </form>
+  </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/sockjs-client/1.4.0/sockjs.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/stomp.js/2.3.3/stomp.min.js"></script>
 <script src="/js/main.js"></script>
-<script type="module">
-    import {checkToken, fetchWithJwtAuth} from "/js/auth.js";
-
-    document.addEventListener("DOMContentLoaded", async function () {
-        const response = await fetchWithJwtAuth('/index.html'); // 여기서 URL 이 API 요청을 뜻
-        //fetchWithJwtAuth 함수는 JSON 데이터를 가져오기 위한 API 요청에 사용
-        if (response.ok) {
-            console.log("문제없음")
-            window.location.href = '/login.html?error=Unauthorized'; // This will redirect the user to index.html
-        } else {
-            console.error('Failed to load index.html');
-        }
-    });
-
-
-    checkToken();
-</script>
 </body>
 </html>
